--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <ul>
         <li>Item 1</li>
-        <li>item 2</li>
+        <li> "Kubernetes: Introdução a orquestração de containers"</li>
         <li>Item 3</li>
         <li>Item 4</li>
     </ul>
