--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Testando o GIT</h1>
 
     <ul>
-        <li>Item 1</li>
+        <li>Vangrant: Gerenciando máquinas virtuais</li>
         <li> "Kubernetes: Introdução a orquestração de containers"</li>
         <li>Item 3</li>
         <li>Item 4</li>
