--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li>Vangrant: Gerenciando máquinas virtuais</li>
         <li> "Kubernetes: Introdução a orquestração de containers"</li>
-        <li>Item 3</li>
+        <li>Ansible: Sua infraestrutura como código</li>
         <li>Item 4</li>
     </ul>
     
