--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li>Vangrant: Gerenciando máquinas virtuais</li>
         <li> "Kubernetes: Introdução a orquestração de containers"</li>
         <li>Ansible: Sua infraestrutura como código</li>
-        <li>Item 4</li>
+        <li>Docker: Criando containers sem dor de cabeça</li>
     </ul>
     
 </body>
